--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-/vendor/bundle
+/vendor/bundle/*
+!/vendor/bundle/.keep
 
 # Ignore all logfiles and tempfiles.
 /log/*
