--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   rails:
     image: rails:5
+    user: '1000:1000'
     environment:
       TZ: Japan
     working_dir: /usr/src/app
