--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -11,7 +11,7 @@ server {
   # }
 
   location / {
-    proxy_pass http://rails:3000;
+    proxy_pass http://app:3000;
     proxy_set_header Host $host;
   }
 
