--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,9 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+  template: template0
+  collation: C
+  ctype: C
   username: app
   password:
   host: db
