--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,6 +1,6 @@
-FROM ruby:2.4
+FROM ruby:2.4.3
 
-RUN apt-get update -qq && \
+RUN apt-get update && \
     apt-get install -y \
       build-essential \
       libpq-dev \
