Add uid option for useradd to Dockerfile

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && \
 
 # add user
 RUN groupadd -g 1000 docker && \
-    useradd -g docker -G sudo -m -s /bin/bash docker && \
+    useradd -u 1000 -g docker -G sudo -m -s /bin/bash docker && \
     echo 'docker:docker' | chpasswd
 
 USER docker
