Update docker files for environment variable uid and gid

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -8,9 +8,12 @@ RUN apt-get update && \
       nodejs \
       sudo
 
+ARG uid
+ARG gid
+
 # add user
-RUN groupadd -g 1000 docker && \
-    useradd -u 1000 -g docker -G sudo -m -s /bin/bash docker && \
+RUN groupadd -g $gid docker && \
+    useradd -u $uid -g docker -G sudo -m -s /bin/bash docker && \
     echo 'docker:docker' | chpasswd
 
 USER docker
