Add environment variable RAILS_FORCE_SSL to dot env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       RAILS_ENV: ${RAILS_ENV}
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       RAILS_SERVE_STATIC_FILES: ${RAILS_SERVE_STATIC_FILES}
+      RAILS_FORCE_SSL: ${RAILS_FORCE_SSL}
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
