Modify app container command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ./vendor/bundle:/usr/local/bundle
     ports:
       - '3000:3000'
-    command: rails s -b 0.0.0.0
+    command: bash -c 'rm -f tmp/pids/server.pid; rails s -b 0.0.0.0'
     depends_on:
       - db
   db:
