Fix database config

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,9 @@ SECRET_KEY_BASE=
 
 APP_UID=1000
 APP_GID=1000
+
+DATABASE_HOST=db
+DATABASE_PORT=5432
+DATABASE_USER=app
+DATABASE_NAME=app
+DATABASE_PASSWORD=app
