--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,12 +1,16 @@
-FROM ruby:2.4.3
+FROM ruby:2.5.3
 
 RUN apt-get update && \
     apt-get install -y \
-      build-essential \
-      libpq-dev \
-      postgresql-client \
-      nodejs \
-      sudo
+    build-essential \
+    libpq-dev \
+    postgresql-client \
+    sudo
+
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
+    apt install -y nodejs
+
+RUN npm install -g yarn
 
 ARG uid
 ARG gid
