--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,7 +12,11 @@ server {
 
   location / {
     proxy_pass http://app:3000;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header Client-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $remote_addr;
+    # proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   #error_page 404 /404.html;
