--- a/.env.development
+++ b/.env.development
@@ -12,4 +12,7 @@ DATABASE_USER=app
 DATABASE_NAME=app
 DATABASE_PASSWORD=app
 
+PUBLISH_WEB_SERVER_PORT=80
+PUBLISH_DATABASE_PORT=5432
+
 RACK_DEV_MARK=development
