--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       TZ: Asia/Tokyo
     ports:
-      - '5432:5432'
+      - '${PUBLISH_DATABASE_PORT}:5432'
     volumes:
       - db:/var/lib/postgresql/data
       - ./backup:/backup
@@ -32,7 +32,7 @@ services:
     environment:
       TZ: Asia/Tokyo
     ports:
-      - '80:80'
+      - '${PUBLISH_WEB_SERVER_PORT}:80'
     volumes:
       - ./nginx:/etc/nginx
       - ./log/nginx:/var/log/nginx
