Add environment value for colorize logging

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ RAILS_ENV=development
 RAILS_SERVE_STATIC_FILES=true
 RAILS_FORCE_SSL=
 RAILS_LOG_TO_STDOUT=
+RAILS_COLORIZE_LOGGING=true
 
 APP_UID=1000
 APP_GID=1000
