--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,9 @@
 RAILS_ENV=development
 RAILS_SERVE_STATIC_FILES=true
 RAILS_FORCE_SSL=
+
 RAILS_LOG_TO_STDOUT=
+RAILS_LOG_SHIFT_AGE=5
 RAILS_COLORIZE_LOGGING=true
 
 APP_UID=1000
