Use alpine image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3'
 services:
   app:
     build:
-      context: './docker/app'
+      context: ./docker/app
       args:
         uid: ${APP_UID}
         gid: ${APP_GID}
     environment:
+      PS1: '\u@\h:\w\$$ '
       TZ: Asia/Tokyo
     env_file: .env
     working_dir: /app
