--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,23 +1,27 @@
-FROM ruby:2.5.3
+FROM ruby:2.5.3-alpine
 
-RUN apt-get update && \
-    apt-get install -y \
-    build-essential \
-    libpq-dev \
-    postgresql-client \
+RUN apk update && \
+    apk add \
+    # nokogiri
+    build-base \
+    libxml2-dev \
+    libxslt-dev \
+    # postgresql
+    postgresql-dev \
+    # others
+    nodejs \
+    tzdata \
+    vim \
+    bash \
     sudo
-
-RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
-    apt install -y nodejs
-
-RUN npm install -g yarn
 
 ARG uid
 ARG gid
 
 # add user
-RUN groupadd -g $gid docker && \
-    useradd -u $uid -g docker -G sudo -m -s /bin/bash docker && \
+RUN addgroup -g $gid docker && \
+    adduser -S -u $uid -G docker docker && \
+    echo 'docker ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
     echo 'docker:docker' | chpasswd
 
 USER docker
