--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,6 +14,7 @@ server {
 
   location / {
     proxy_pass http://app:3000;
+    proxy_http_version 1.1;
     proxy_set_header Host $http_host;
     # proxy_set_header X-Real-IP $remote_addr;
     # proxy_set_header Client-IP $remote_addr;
