--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,13 @@ services:
       - db:/var/lib/postgresql/data
       - ./backup:/backup
   web:
-    image: nginx:1.13.9
+    build:
+      context: ./docker/web
     environment:
       TZ: Asia/Tokyo
     ports:
       - '${PUBLISH_WEB_SERVER_PORT}:80'
     volumes:
-      - ./nginx:/etc/nginx
       - ./log/nginx:/var/log/nginx
     depends_on:
       - app
