--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,9 @@
 /tmp/*
 !/tmp/.keep
 
-# Ignore uploaded files in development
+# Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
-
-/node_modules
-/yarn-error.log
 
 /public/assets
 .byebug_history
@@ -39,3 +36,11 @@
 # backup
 /backup/*
 !/backup/.keep
+
+# webpacker
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
