--- a/docker/web/nginx/conf.d/default.conf
+++ b/docker/web/nginx/conf.d/default.conf
@@ -22,6 +22,16 @@ server {
     # proxy_set_header X-Forwarded-Proto $scheme;
   }
 
+  # Action Cable
+  # location /cable {
+  #   proxy_pass http://app:3000/cable;
+  #   proxy_set_header Host $http_host;
+  #   proxy_set_header Upgrade websocket;
+  #   proxy_set_header Connection Upgrade;
+  #   # proxy_set_header X-Real-IP $remote_addr;
+  #   # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  # }
+
   #error_page 404 /404.html;
 
   # redirect server error pages to the static page /50x.html
