Add logging max size

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
     command: bash -c 'rm -f tmp/pids/server.pid; rails s -b 0.0.0.0'
     depends_on:
       - db
+    logging:
+      options:
+        max-size: 10m
+        max-file: '10'
   db:
     build:
       context: ./docker/db
@@ -30,6 +34,10 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
       - ./backup:/backup
+    logging:
+      options:
+        max-size: 10m
+        max-file: '10'
   web:
     build:
       context: ./docker/web
@@ -41,5 +49,9 @@ services:
       - ./log/nginx:/var/log/nginx
     depends_on:
       - app
+    logging:
+      options:
+        max-size: 10m
+        max-file: '10'
 volumes:
   db:
