--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@kmdtmyk/midnight": "^0.3.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
+    "dateformat": "^3.0.3",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
