Upgrade ruby to 2.7.1 and rails to 6.0.3

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 /tmp/*
 !/tmp/.keep
 
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
