--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,12 @@
 !/storage/.keep
 
 /public/assets
-.byebug_history
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
 
 # dotenv
 .env
