--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@kmdtmyk/midnight": "^0.3.3",
+    "@kmdtmyk/ruby-date": "^0.1.0",
     "@kmdtmyk/vue-fields": "^0.2.5",
     "@rails/actioncable": "^6.1.3",
     "@rails/activestorage": "^6.1.3",
