--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@rails/actioncable": "^6.1.3",
     "@rails/activestorage": "^6.1.3",
     "@rails/ujs": "^6.1.3",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "5.4.0",
     "axios": "^0.21.1",
     "pug": "^3.0.1",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
