--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,5 @@
-COMPOSE_FILE=docker-compose.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose.development.yml
 
-RAILS_ENV=development
 RAILS_SERVE_STATIC_FILES=true
 RAILS_FORCE_SSL=
 
