--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,15 @@ services:
       args:
         uid: ${APP_UID}
         gid: ${APP_GID}
+    env_file: .env
     environment:
       PS1: '\u@\h:\w\$$ '
       TZ: Asia/Tokyo
-    env_file: .env
     working_dir: /app
     volumes:
       - .:/app
       - ./vendor/bundle:/usr/local/bundle
-    command: bash -c 'rm -f tmp/pids/server.pid; rails s -b 0.0.0.0 & bin/webpack-dev-server'
-    ports:
-      - 3035:3035
+    command: bash -c 'rm -f tmp/pids/server.pid; rails s -b 0.0.0.0'
     depends_on:
       - db
     logging:
@@ -31,8 +29,6 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_INITDB_ARGS: '--encoding=UTF-8 --locale=C'
       TZ: Asia/Tokyo
-    ports:
-      - '${PUBLISH_DATABASE_PORT}:5432'
     volumes:
       - db:/var/lib/postgresql/data
       - ./backup:/backup
