--- a/.env.development
+++ b/.env.development
@@ -18,6 +18,10 @@ DATABASE_USER=app
 DATABASE_NAME=app
 DATABASE_PASSWORD=app
 
+ACTIVE_STORAGE_SERVICE=local
+GCS_CREDENTIALS=
+GCS_BUCKET=
+
 PUBLISH_WEB_SERVER_PORT=80
 PUBLISH_DATABASE_PORT=5432
 
