--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
