--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@kmdtmyk/ruby-date": "^0.1.0",
     "@kmdtmyk/vue-fields": "^0.2.5",
     "@rails/actioncable": "^6.1.5",
@@ -11,6 +12,7 @@
     "axios": "^0.27.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.7",
