--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ GCS_BUCKET=
 
 PUBLISH_WEB_SERVER_PORT=80
 PUBLISH_DATABASE_PORT=5432
+WEBPACK_DEV_SERVER_PORT=3035
 
 RACK_DEV_MARK=development
 RACK_DEV_MARK_POSITION=right
